--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HCIproject" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- per non avere action bar: -->
+    <!-- <style name="Theme.HCIproject" parent="Theme.MaterialComponents.NoActionBar"> -->
+    <!-- per eliminare spazio actiobar -->
+    <!-- <item name="android:actionBarSize">0dp</item> -->
+    <style name="Theme.HCIproject" parent="Theme.MaterialComponents">
         <!-- Primary brand color. -->
+        <item name="android:actionBarSize">0dp</item>
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
