--- a/app/src/main/res/menu/exercisemenu.xml
+++ b/app/src/main/res/menu/exercisemenu.xml
@@ -33,4 +33,8 @@
                 android:title="Other"/>
         </menu>
     </item>
+    <item
+        android:id="@+id/addExerciseitem"
+        android:title="Add Exercise"
+        app:showAsAction="always"/>
 </menu>
