--- a/app/src/main/res/menu/foodmenu.xml
+++ b/app/src/main/res/menu/foodmenu.xml
@@ -30,4 +30,8 @@
                 android:title="Other"/>
         </menu>
     </item>
+    <item
+        android:id="@+id/addfooditem"
+        android:title="Add Food"
+        app:showAsAction="always"/>
 </menu>
